# Update - Added all models to the admin pannel - Changed the name of the home page to index - Added __str__ to multiple models - Added blank true to multiple models - Changed the user in `Player` model to ForeignKey - Added view code for the teams page with to get the connected and following teams - Added team detail view code - Updated the html pages of teams index and detail

--- a/templates/overlays/navbar.html
+++ b/templates/overlays/navbar.html
@@ -7,7 +7,7 @@
 
 <div class="stickyBottomNav">
     <ul>
-        <li><a href="{% url 'home' %}"><img src="/static/images/navbar/home.svg"></a></li>
+        <li><a href="{% url 'index' %}"><img src="/static/images/navbar/home.svg"></a></li>
         <li><a href="{% url 'teams' %}"><img src="/static/images/navbar/group.svg"></a></li>
         <li><a href="{% url 'profile' %}"><img src="/static/images/navbar/profile.svg"></a></li>
     </ul>
