# Update - Changed the index scroll css to work better on mobile with some js - Added selection buttons on the detail team view

--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="teams-container" style="margin-top: 16px; margin-bottom: 8px;">
+            <div class="teams-container" style="margin-top: 16px; padding-bottom: 8px;">
                 {% if teams %}
                 <h2 style="margin: 0; font-size: 16px;">Playing</h2>
                 {% endif %}
@@ -46,5 +46,7 @@
                 {% endfor %}
             </div>
         </div>
+
+        <script src="/static/js/teams/index.js"></script>
     </body>
 </html>
