--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -18,6 +18,18 @@
                     <p style="font-weight: 600; ">{{ team.name }}</p>
                 </div>
             </div>
+
+            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid #1DA1F2;">
+                <a class="flex-row" style="width: calc(100vw * 1/3); background: #1DA1F2; justify-content: center;">
+                    Wedstrijden
+                </a>
+                <a class="flex-row" style="width: calc(100vw * 1/3); justify-content: center;">
+                    Team stats
+                </a>
+                <a class="flex-row" style="width: calc(100vw * 1/3); justify-content: center;">
+                    Spelers
+                </a>
+            </div>
         </div>
 
     </body>
