# Update - Added django channels to the project - Added finished to the `Match` model - Added for_team to the `Goal` model - Added `team_data` to the consumer - Wedstrijden request added to the consumer - Team_stats request added to the consumer - spelers request add to the consumer - Added the js inport to the detail.html - Websocket connection creation added to the js - Added data inplimation to for the html

--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -20,6 +20,14 @@ body {
     align-items: center;
 }
 
+.flex-center {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
     margin: 0;
 }
@@ -36,4 +44,26 @@ h1 {
 a {
     text-decoration: none;
     color: black;
+}
+
+.active {
+    background: #1DA1F2;
+}
+
+.player-container {
+    width: calc(100vw * 1/3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 156px;
+}
+
+.player-profile-pic {
+    width: 96px;
+    border-radius: 50%;
+}
+
+.player-name {
+    margin: 8px;
 }
