--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -47,6 +49,6 @@
             </div>
         </div>
 
-        <script src="/static/js/teams/index.js"></script>
+        <script src="{% static '/js/teams/index.js' %}"></script>
     </body>
 </html>
