--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -20,17 +22,22 @@
             </div>
 
             <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid #1DA1F2;">
-                <a class="flex-row" style="width: calc(100vw * 1/3); background: #1DA1F2; justify-content: center;">
+                <a class="flex-row button active" data="wedstrijden" style="width: calc(100vw * 1/3); justify-content: center;">
                     Wedstrijden
                 </a>
-                <a class="flex-row" style="width: calc(100vw * 1/3); justify-content: center;">
+                <a class="flex-row button" data="team_stats" style="width: calc(100vw * 1/3); justify-content: center;">
                     Team stats
                 </a>
-                <a class="flex-row" style="width: calc(100vw * 1/3); justify-content: center;">
+                <a class="flex-row button" data="spelers" style="width: calc(100vw * 1/3); justify-content: center;">
                     Spelers
                 </a>
             </div>
+            <div id="info-container" style="height: calc(100vh - (315.5px + 64px)); width: 100%; overflow-y: scroll;">
+
+            </div>
         </div>
 
+        <p style="display: none;" id="team-id">{{ team.id_uuid }}</p>
+        <script src="{% static '/js/teams/detail.js' %}"></script>
     </body>
 </html>
