# update - Added disconnect deplate to the `team_data` channel - Added `get_absolute_url` to the wedstrijden response - Added `get_absolute_url` to the spelers response - Created the `profile_data` channel - Added `player_stats` request - Added `profile_data` routing - Added the `get_absolute_url` to the `Team`, `Player`, `Match` models - Added a default profile picture to the `Player` model - Changed the profile url to have the `Player` id_uuid in it - Added the match url - Added a place holder match view - Changed the navbar to have a login icon button when user is not authenticated. - Added load icon when loading from websocket on teams detail.html and profile index.html - Added public and private view to the profile page - Added flex-row and flex-column to the login_registration.css file - Added load icon activation code the js of detail.js - Changed the id_uuid fetch in js to check the url - Changed the url button urls to the `get_absolute_url` in the js - Added websocket connection creation in the `profile/detail.js` - Added score request and fill for the `profile/detail.js`

--- a/templates/overlays/navbar.html
+++ b/templates/overlays/navbar.html
@@ -9,6 +9,10 @@
     <ul>
         <li><a href="{% url 'index' %}"><img src="/static/images/navbar/home.svg"></a></li>
         <li><a href="{% url 'teams' %}"><img src="/static/images/navbar/group.svg"></a></li>
-        <li><a href="{% url 'profile' %}"><img src="/static/images/navbar/profile.svg"></a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{{ profile_url }}"><img src="/static/images/navbar/profile.svg"></a></li>
+        {% else %}
+            <li><a href="{% url 'login' %}"><img src="/static/images/navbar/login.svg"></a></li>
+        {% endif %}
     </ul>
 </div>
