--- a/static_workfile/css/authentication/login_registration.css
+++ b/static_workfile/css/authentication/login_registration.css
@@ -232,3 +232,17 @@ body {
 .CHK2-button:hover {
     color: black;
 }
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
