--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -14,19 +16,25 @@
 
         <div class="flex-column" style="margin-top: 64px;">
             <div class="flex-column" style="height: 212px; justify-content: center; width: 100%;">
-                <img src="{{ player.profile_picture.url }}" style="width: 128px; height: 128px; border-radius: 50%; margin: 0 auto;">
-                {{ user.username }}
+                <img src="{{ player.profile_picture.url }}" alt="profile picture" style="width: 128px; height: 128px; border-radius: 50%; margin: 0 auto;">
+                <p>{{ user_data.username }}</p>
             </div>
 
             <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid #1DA1F2; justify-content: flex-start">
-                <a class="flex-row" style="width: calc(100vw * 1/3); background: #1DA1F2; justify-content: center;">
+                <a class="flex-row button active" data="player_stats" style="width: calc(100vw * 1/3); justify-content: center;">
                     Stats
                 </a>
-                <a class="flex-row" style="width: calc(100vw * 1/3); justify-content: center;">
+                {% if is_own_profile %}
+                <a class="flex-row button" data="settings_request" style="width: calc(100vw * 1/3); justify-content: center;">
                     Settings
                 </a>
+                {% endif %}
+            </div>
+            <div id="info-container" style="height: calc(100vh - (315.5px + 80px)); width: 100%; overflow-y: scroll;">
+                
             </div>
         </div>
 
+        <script src="{% static '/js/profile/detail.js' %}"></script>
     </body>
 </html>
