--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -37,7 +37,7 @@ h1 {
     flex-direction: column;
     gap: 8px;
     width: 100%;
-    height: calc(100vh - 203px);
+    height: calc((var(--vh, 1vh) * 100) - 190px);
     overflow-y: scroll;
 }
 
@@ -47,7 +47,8 @@ a {
 }
 
 .active {
-    background: #1DA1F2;
+    color: white;
+    background: var(--button-color);
 }
 
 .player-container {
@@ -109,4 +110,124 @@ a {
     100% {
       transform: rotate(360deg);
     }
+}
+
+.from-container {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+
+    margin-left: 8px;
+    margin-right: 8px;
+
+    border-radius: 24px;
+
+    width: calc(100% - 16px);
+}
+
+.text-input-shell {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+
+    width: 100%;
+
+    margin-top: 12px;
+}
+
+.text-checkbox-shell {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    box-sizing: border-box;
+
+    width: 100%;
+
+    margin-top: 12px;
+}
+
+.text-input {
+    border: 2px #ebebeb;
+    border-style: solid;
+    background-color: #ffffff;
+
+    color: #313131;
+
+    font-size: 16px;
+
+    padding: 8px;
+
+    width: calc(100% - 20px);
+}
+
+.text-checkbox {
+    border: 2px #ebebeb;
+    border-style: solid;
+    background-color: #ffffff;
+
+    padding: 8px;
+
+    width: 20px;
+
+    margin-left: 12px;
+}
+
+.save-button {
+    background-color: var(--button-color); 
+    border: 0;
+
+    color: var(--text-color);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+    font-size: 16px;
+    
+    cursor: pointer;
+
+    width: 100%;
+    height: 48px;
+
+    margin: 0;
+    margin-top: 12px;
+    margin-bottom: 6px;
+
+    font-family: termina, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    border-radius: 4px;
+
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.save-button.loading:before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid white;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    animation: loading 1s linear infinite;
+    position: absolute;
+    left: calc(50% - 8px);
+    transform: translate(-50%, -50%);
+    margin-top: 3px;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.save-button.loading #save-button-text {
+    visibility: hidden;
 }
