--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -15,12 +15,12 @@
         {% include 'overlays/navbar.html' %}
 
         <div class="flex-column" style="margin-top: 64px;">
-            <div class="flex-column" style="height: 212px; justify-content: center; width: 100%;">
+            <div class="flex-column" style="height: 170px; justify-content: center; width: 100%;">
                 <img src="{{ player.profile_picture.url }}" alt="profile picture" style="width: 128px; height: 128px; border-radius: 50%; margin: 0 auto;">
-                <p>{{ user_data.username }}</p>
+                <p style="margin-bottom: 0;">{{ user_data.username }}</p>
             </div>
 
-            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid #1DA1F2; justify-content: flex-start">
+            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid var(--button-color); justify-content: flex-start">
                 <a class="flex-row button active" data="player_stats" style="width: calc(100vw * 1/3); justify-content: center;">
                     Stats
                 </a>
@@ -30,11 +30,12 @@
                 </a>
                 {% endif %}
             </div>
-            <div id="info-container" style="height: calc(100vh - (315.5px + 80px)); width: 100%; overflow-y: scroll;">
-                
+            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (315.5px + 38px)); width: 100%; overflow-y: scroll;">
+
             </div>
         </div>
 
         <script src="{% static '/js/profile/detail.js' %}"></script>
+        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
