--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid #1DA1F2;">
+            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid var(--button-color);">
                 <a class="flex-row button active" data="wedstrijden" style="width: calc(100vw * 1/3); justify-content: center;">
                     Wedstrijden
                 </a>
@@ -32,11 +32,12 @@
                     Spelers
                 </a>
             </div>
-            <div id="info-container" style="height: calc(100vh - (315.5px + 64px)); width: 100%; overflow-y: scroll;">
+            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (315.5px + 64px)); width: 100%; overflow-y: scroll;">
 
             </div>
         </div>
-        
+
         <script src="{% static '/js/teams/detail.js' %}"></script>
+        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
