--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -50,5 +50,6 @@
         </div>
 
         <script src="{% static '/js/teams/index.js' %}"></script>
+        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
