--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -16,7 +16,12 @@
 
         <div class="flex-column" style="margin-top: 64px;">
             <div class="flex-column" style="height: 170px; justify-content: center; width: 100%;">
-                <img src="{{ player.profile_picture.url }}" alt="profile picture" style="width: 128px; height: 128px; border-radius: 50%; margin: 0 auto;">
+                <div id="profilePic-container" class="profile-container">
+                    <img src="{{ player.profile_picture.url }}" alt="profile picture" class="profile-pic">
+                    <div id="overlay" class="overlay">
+                        <img src="/static/images/player/edit-button-svgrepo-com.svg" alt="Overlay Icon" class="overlay-icon">
+                    </div>
+                </div>
                 <p style="margin-bottom: 0;">{{ user_data.username }}</p>
             </div>
 
@@ -34,6 +39,25 @@
 
             </div>
         </div>
+
+        {% if is_own_profile %}
+            <input type="file" id="profilePicInput" style="display: none;" accept="image/*">
+            <div id="imageModal" class="modal">
+                <div class="modal-content">
+                    <h4>Change Profile Picture</h4>
+                    <img id="imagePreview" src="" alt="Image Preview" class="image-preview">
+                    <button id="saveProfilePic">Save</button>
+                    <button id="closeModal">Cancel</button>
+                </div>
+            </div>
+            <script>
+                const profilePic = document.getElementById('overlay');
+                console.log(profilePic);
+                profilePic.onclick = function() {
+                    document.getElementById('profilePicInput').click();
+                };
+            </script>
+        {% endif %}
 
         <script src="{% static '/js/profile/detail.js' %}"></script>
         <script src="{% static '/js/programs/mobile_view.js' %}"></script>
