# Update - Changed the name of the profile detail.js file to be more discriptive

--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -59,7 +59,7 @@
             </script>
         {% endif %}
 
-        <script src="{% static '/js/profile/detail.js' %}"></script>
+        <script src="{% static '/js/profile/profile-detail.js' %}"></script>
         <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
