--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -19,6 +19,13 @@
                 <div class="flex-row" style="background-color: rgba(0, 0, 0, 0.3); width: 100%; height: 48px; justify-content: center">
                     <p style="font-weight: 600; ">{{ team.name }}</p>
                 </div>
+                <div class="icon-container" data-followed="{% if following %}true{% else %}false{% endif %}">
+                    <img id="follow-full" src="{% static '/images/heart-full.svg' %}" alt="volgen" class="volgen-icon">
+                    <img id="follow-outline" src="{% static '/images/heart-outline.svg' %}" alt="volgen" class="volgen-icon">
+                </div>
+                {% if coaching %}
+                <img id="settings" src="{% static '/images/settings.svg' %}" alt="instellingen" class="settings-icon">
+                {% endif %}
             </div>
 
             <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid var(--button-color);">
