--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -44,6 +44,9 @@
             </div>
         </div>
 
+        
+        <p style="display: none;" id="user_id">{{ request.user.id }}</p>
+
         <script src="{% static '/js/teams/detail.js' %}"></script>
         <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
