--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -333,3 +333,35 @@ a {
     right: 8px;
     top: 58px;
 }
+
+.logout-button {
+    background-color: #FF0000; 
+    border: 0;
+
+    color: var(--text-color);
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 16px;
+    
+    cursor: pointer;
+
+    width: 100%;
+    height: 48px;
+
+    margin: 0;
+    margin-top: 12px;
+    margin-bottom: 6px;
+
+    font-family: termina, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    border-radius: 4px;
+
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
