--- a/static_workfile/css/overlays/navbar.css
+++ b/static_workfile/css/overlays/navbar.css
@@ -26,7 +26,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center
 }
 
 .stickyBottomNav a {
