--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -28,16 +28,13 @@
                 {% endif %}
             </div>
 
-            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid var(--button-color);">
-                <a class="flex-row button active" data="wedstrijden" style="width: calc(100vw * 1/3); justify-content: center;">
-                    Wedstrijden
-                </a>
-                <a class="flex-row button" data="team_stats" style="width: calc(100vw * 1/3); justify-content: center;">
-                    Team stats
-                </a>
-                <a class="flex-row button" data="spelers" style="width: calc(100vw * 1/3); justify-content: center;">
-                    Spelers
-                </a>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <a class="button active" data="wedstrijden">Wedstrijden</a>
+                    <a class="button" data="ended_matches">scores</a>
+                    <a class="button" data="team_stats">Team stats</a>
+                    <a class="button" data="spelers">Spelers</a>
+                </div>
             </div>
             <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (315.5px + 64px)); width: 100%; overflow-y: scroll;">
 
