--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -25,15 +25,16 @@
                 <p style="margin-bottom: 0;">{{ user_data.username }}</p>
             </div>
 
-            <div class="flex-row" style="margin-top: 24px; border-bottom: 6px solid var(--button-color); justify-content: flex-start">
-                <a class="flex-row button active" data="player_stats" style="width: calc(100vw * 1/3); justify-content: center;">
-                    Stats
-                </a>
-                {% if is_own_profile %}
-                <a class="flex-row button" data="settings_request" style="width: calc(100vw * 1/3); justify-content: center;">
-                    Settings
-                </a>
-                {% endif %}
+            <div class="carousel-container">
+                <div class="carousel">
+                    <a class="button active" data="player_stats">Stats</a>
+                    <a class="button" data="teams">Teams</a>
+                    <a class="button" data="upcomming_matches">Wedstrijden</a>
+                    <a class="button" data="past_matches">scores</a>
+                    {% if is_own_profile %}
+                    <a class="button" data="settings_request">Settings</a>
+                    {% endif %}
+                </div>
             </div>
             <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (315.5px + 49px)); width: 100%; overflow-y: scroll;">
 
