--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -399,3 +399,54 @@ a {
     transition-duration: 0.4s;
     cursor: pointer;
 }
+
+.search-container {
+    display: flex;
+    align-items: center;
+    background: #D9D9D9;
+    padding: 4px;
+    border-radius: 4px;
+    height: 24px;
+    cursor: pointer;
+    transition: width 0.3s ease-in-out;
+}
+
+.search-icon {
+    height: 24px;
+    width: 24px;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.search-container img {
+    height: 24px;
+    width: 24px;
+}
+
+.search-input {
+    border: none;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    width: 0;
+    opacity: 0;
+    transition: width 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    font-size: 14px;
+    height: 100%;
+}
+
+.team-button {
+    width: 100%; 
+    min-height: 156px; 
+    background: #D9D9D9; 
+    border-radius: 4px; 
+    justify-content: flex-end;
+}
+
+.team-container {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    border-radius: 0 0 4px 4px;
+    height: 48px;
+    justify-content: center
+}
