--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -414,7 +414,7 @@ a {
 .search-icon {
     height: 24px;
     width: 24px;
-    transition: opacity 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .search-container img {
@@ -449,4 +449,32 @@ a {
     border-radius: 0 0 4px 4px;
     height: 48px;
     justify-content: center
+}
+
+.past-request {
+    background-color: #D9D9D9;
+    border-radius: 4px;
+    margin: 0;
+    margin-right: 8px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.past-request-text {
+    font-size: 14px;
+    padding: 5px 0 5px 8px;
+    margin: 0;
+    margin-left: 4px;
+
+    max-width: 72px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.remove-button {
+    font-size: 14px;
+    margin: 0;
+    padding: 5px 8px;
 }
