# Update - A start for the search dropdown for teams and clubs

--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -16,7 +16,10 @@
 
         <div class="flex-column" style="margin: 64px 8px 0 8px;">
             <div class="flex-row">
-                <h1 style="font-size: 24px;">Teams</h1>
+                <select id="type">
+                    <option value="teams">Teams</option>
+                    <option value="clubs">Clubs</option>
+                </select>
                 <div id="search-container-full" class="flex-row" style="width: auto;"> 
                     <div class="search-container">
                         <div class="search-icon">
