--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -478,3 +478,26 @@ a {
     margin: 0;
     padding: 5px 8px;
 }
+
+select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 0 1em 0 0;
+    margin: 0;
+    outline: none;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="5"><path d="M0 0 L10 0 L5 5 z" fill="black"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 10px 5px;
+    color: black;
+}
+
+option {
+    font-size: 14px;
+    font-weight: 300;
+}
