--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -29,8 +29,8 @@
                 <div class="carousel">
                     <a class="button active" data="player_stats">Stats</a>
                     <a class="button" data="teams">Teams</a>
-                    <a class="button" data="upcomming_matches">Wedstrijden</a>
-                    <a class="button" data="past_matches">scores</a>
+                    <a class="button" data="upcomming_matches">Programma</a>
+                    <a class="button" data="past_matches">Uitslagen</a>
                     {% if is_own_profile %}
                     <a class="button" data="settings_request">Settings</a>
                     {% endif %}
