--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -39,5 +39,10 @@
 
             </div>
         </div>
+
+        <p style="display: none;" id="user_id">{{ request.user.id }}</p>
+
+        <script src="{% static '/js/clubs/detail.js' %}"></script>
+        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
