# Update - Changed the name of the club picture to logo - Changed the `start_data` to be a string: "dag_naam, datum maand_naam" - Created the match html template

--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -13,5 +13,41 @@
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
+
+        <div class="flex-column" style="margin-top: 48px;">
+            <div class="flex-column" style="width: calc(100% - 32px); margin: 0 16px;">
+                <div class="flex-row" style="justify-content: flex-start;">
+                    <p style="font-weight: 600; font-size: 14px;">{{ start_date }}</p>
+                </div>
+                <div class="flex-row" style="margin-top: 6px;">
+                    <a href="{{ match.home_team.get_absolute_url }}" class="flex-column" style="justify-content: flex-start; text-decorator: none; color: black;">
+                        <img src="{{ match.home_team.club.logo.url }}" alt="{{ match.home_team.name }}" width="64px" height="64px" style="border-radius: 50%;">
+                        <h2 style="margin: 4px 0; font-size: 22px;">{{ match.home_team.name }}</h2>
+                    </a>
+
+                    <div class="flex-column" style="justify-content: centre;">
+                        <p style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
+
+                        <p style="margin: 0;">{{ match.home_score }} / {{ match.away_score }}</p>
+                    </div>
+
+                    <a href="{{ match.away_team.get_absolute_url }}" class="flex-column" style="justify-content: flex-start; text-decorator: none; color: black;">
+                        <img src="{{ match.away_team.club.logo.url }}" alt="{{ match.away_team.name }}" width="64px" height="64px" style="border-radius: 50%;">
+                        <h2 style="margin: 4px 0; font-size: 22px;">{{ match.away_team.name }}</h2>
+                    </a>
+                </div>
+            </div>
+
+            <div class="carousel-container">
+                <div class="carousel">
+                    <a class="button active" data="player_stats">Events</a>
+                    <a class="button" data="teams">{{ match.home_team.name }}</a>
+                    <a class="button" data="upcomming_matches">{{ match.away_team.name }}</a>
+                </div>
+            </div>
+            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - 315.5px); width: 100%; overflow-y: scroll;">
+
+            </div>
+        </div>
     </body>
 </html>
