--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -26,7 +26,11 @@
                     </a>
 
                     <div class="flex-column" style="justify-content: centre;">
-                        <p style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
+                        {% if match.finished %}
+                            <p style="margin: 0; font-size: 16px; font-weight: 600;">Uitslag</p>
+                        {% else %}
+                            <p style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
+                        {% endif %}
 
                         <p style="margin: 0;">{{ match.home_score }} / {{ match.away_score }}</p>
                     </div>
@@ -40,14 +44,17 @@
 
             <div class="carousel-container">
                 <div class="carousel">
-                    <a class="button active" data="player_stats">Events</a>
-                    <a class="button" data="teams">{{ match.home_team.name }}</a>
-                    <a class="button" data="upcomming_matches">{{ match.away_team.name }}</a>
+                    <a class="button active" data="match_events">Events</a>
+                    <a class="button" data="home_team">{{ match.home_team.name }}</a>
+                    <a class="button" data="away_team">{{ match.away_team.name }}</a>
                 </div>
             </div>
             <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - 315.5px); width: 100%; overflow-y: scroll;">
 
             </div>
         </div>
+
+        <script src="{% static '/js/matches/detail.js' %}"></script>
+        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
     </body>
 </html>
