# Update - Made functions of the `makePlayerList`, `checkIfCoach` - Made the match registration button disapear when the match is finished. - Added the PlayerGroup save button function.
# Bugfix
- Fixed a bug with the makePlayerGroupList function.
- Fixed the player group button location

--- a/static_workfile/css/matches/detail.css
+++ b/static_workfile/css/matches/detail.css
@@ -105,7 +105,12 @@ a {
     color: black;
     border-radius: 4px;
     height: 46px;
-    margin: 4px 8px 8px 4px;
+}
+
+.player-group-players {
+    gap: 8px;
+    margin: 0 8px;
+    width: calc(100% - 16px);
 }
 
 .player-name {
