--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -27,14 +27,14 @@
             </div>
 
             <div style="margin: 0 24px; width: calc(100% - 48px)" class="flex-row">
-                <div class="flex-column" style="width: 50%">
-                    <p style="margin: 0;">{{ match.home_team.name }}</p>
+                <div id="{{ team_1.id_uuid }}" class="flex-column" style="width: 50%">
+                    <p style="margin: 0;">{{ team_1.name }}</p>
                     <div id="home-score" style="background: #43ff6480; border-radius: 4px 0 0 4px; width: 100%; height: 46px;" class="flex-center">
                         <p style="margin: 0; padding: 0; font-size: 24px;">0</p>
                     </div>
                 </div>
-                <div class="flex-column" style="width: 50%">
-                    <p style="margin: 0;">{{ match.away_team.name }}</p>
+                <div id="{{ team_2.id_uuid }}" class="flex-column" style="width: 50%">
+                    <p style="margin: 0;">{{ team_2.name }}</p>
                     <div id="away-score" style="background: rgba(235, 0, 0, 0.5); border-radius: 0 4px 4px 0; width: 100%; height: 46px;" class="flex-center">
                         <p style="margin: 0; padding: 0; font-size: 24px;">0</p>
                     </div>
