--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -18,8 +18,8 @@
             <div class="flex-row" style="width: 100%; margin: 12px 0;">
                 <div style="width: calc(100% * 1/3)"></div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
-                    <p style="font-size: 12px; margin: 0;">Perioide 1/2</p>
-                    <p style="font-size: 16px; font-weight: 600; margin: 0;">30:00</p>
+                    <p style="font-size: 12px; margin: 0;">Perioide {{ match.current_part }}/{{ match.parts }}</p>
+                    <p style="font-size: 16px; font-weight: 600; margin: 0;">{{ time_display }}</p>
                 </div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
                     <button class="switch-button">Start/Stop</button>
