# Update - Added score point update when changed on the tracker page - Added the the code to display the pause event on de match detail page

--- a/static_workfile/css/matches/detail.css
+++ b/static_workfile/css/matches/detail.css
@@ -84,10 +84,11 @@ a {
     font-size: 14px;
     font-weight: bold;
     display: flex;
+    justify-content: center;
     align-content: center;
     align-items: center;
     height: 100%;
-    width: auto !important;
+    width: 64px;
     padding: 0 10px;
 }
 
