--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/index.css">
         <link rel="stylesheet" href="/static/css/color/color.css">
+
+        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
+
+        <div class="flex-column" style="margin-top: 48px;">
+            <a href="{% url 'login' %}" class="login_button flex-center">Login</a>
+        </div>
 
     </body>
 </html>
