--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -16,7 +16,9 @@
 
         <div class="flex-column" style="margin-top: 48px;">
             <div class="flex-row" style="width: 100%; margin: 12px 0;">
-                <div style="width: calc(100% * 1/3)"></div>
+                <div style="width: calc(100% * 1/3)" class="flex-column">
+                    <button id="end-half-button" class="switch-button" style="background: red; display: none;">einde</button>
+                </div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
                     <p style="font-size: 12px; margin: 0;">Perioide {{ match.current_part }}/{{ match.parts }}</p>
                     <p id="counter" style="font-size: 16px; font-weight: 600; margin: 0;">{{ time_display }}</p>
