Add favicon to authentication, club, matches, profile, and teams pages

--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -10,6 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/clubs/detail.css">
         <link rel="stylesheet" href="/static/css/color/color.css">
+        
+        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
