--- a/templates/authentication/confirmation_sent.html
+++ b/templates/authentication/confirmation_sent.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="/static/css/color/color.css">
 
         <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
+        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
     </head>
     <body class="background-color">
         {% include 'overlays/navbar.html' %}
