--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -19,7 +19,7 @@
         <div class="flex-column" style="margin-top: 48px;">
             <div class="flex-column" style="height: 212px; background: lightgray; justify-content: flex-end; width: 100%;">
                 <div class="flex-row" style="background-color: rgba(0, 0, 0, 0.3); width: 100%; height: 48px; justify-content: center">
-                    <p style="font-weight: 600; ">{{ team.name }}</p>
+                    <p style="font-weight: 600; ">{{ team }}</p>
                 </div>
                 <div class="icon-container" data-followed="{% if following %}true{% else %}false{% endif %}">
                     <img id="follow-full" src="{% static '/images/heart-full.svg' %}" alt="volgen" class="volgen-icon">
